Fix bug on navbar collapse.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,8 +10,7 @@
 }
 
 a,
-a:hover,
-a:visited {
+a:hover {
   color: inherit;
   text-decoration: none;
 }
